--- a/Notez/Notez.properties
+++ b/Notez/Notez.properties
@@ -1,3 +1,3 @@
 #de.util.NotezProperties
-#Wed Nov 26 13:36:18 CET 2014
-Prop.NotezFolder=./share/
+#Wed Nov 26 14:53:45 CET 2014
+Prop.NotezFolder=./
