Settings changes - added button settings - fixed rememberDecisionDialog - added new settings - edited settings layouts

--- a/Notez/Notez.properties
+++ b/Notez/Notez.properties
@@ -1,4 +1,13 @@
 #de.util.NotezProperties
-#Wed Dec 03 22:42:47 CET 2014
-Prop.NotezFolder=./
-Prop.StartReceiver=no
+#Thu Dec 04 10:29:54 CET 2014
+Prop.NotezRemoteFolder=./remote/
+Prop.BtnGroupVisible=true
+Prop.BtnSaveVisible=true
+Prop.AlwaysSaveOnExit=true
+Prop.BtnRemoveVisible=true
+Prop.BtnShareVisible=true
+Prop.StartReceiver=false
+Prop.BtnAddVisible=true
+Prop.NotezWorkFolder=./
+Prop.LetReceiverRunning=false
+Prop.BtnPinVisible=true
