NotezProperties - file now be created if not exists

--- a/Notez/Notez.properties
+++ b/Notez/Notez.properties
@@ -1,13 +1,13 @@
 #de.util.NotezProperties
-#Thu Dec 04 10:29:54 CET 2014
+#Thu Dec 04 10:37:07 CET 2014
 Prop.NotezRemoteFolder=./remote/
 Prop.BtnGroupVisible=true
 Prop.BtnSaveVisible=true
-Prop.AlwaysSaveOnExit=true
+Prop.AlwaysSaveOnExit=false
 Prop.BtnRemoveVisible=true
 Prop.BtnShareVisible=true
-Prop.StartReceiver=false
+Prop.StartReceiver=true
 Prop.BtnAddVisible=true
 Prop.NotezWorkFolder=./
-Prop.LetReceiverRunning=false
 Prop.BtnPinVisible=true
+Prop.LetReceiverRunning=false
