Mail Share - added sample for mail-share (not running) - added javax.mail library

--- a/Notez/Notez.properties
+++ b/Notez/Notez.properties
@@ -1,13 +1,13 @@
 #de.util.NotezProperties
-#Thu Dec 04 10:37:07 CET 2014
+#Thu Dec 04 10:52:29 CET 2014
 Prop.NotezRemoteFolder=./remote/
-Prop.BtnGroupVisible=true
-Prop.BtnSaveVisible=true
+Prop.BtnGroupVisible=false
+Prop.BtnSaveVisible=false
 Prop.AlwaysSaveOnExit=false
-Prop.BtnRemoveVisible=true
+Prop.BtnRemoveVisible=false
 Prop.BtnShareVisible=true
 Prop.StartReceiver=true
-Prop.BtnAddVisible=true
+Prop.BtnAddVisible=false
 Prop.NotezWorkFolder=./
-Prop.BtnPinVisible=true
+Prop.BtnPinVisible=false
 Prop.LetReceiverRunning=false
