Replaced old NotezData by new NotezData-structure

--- a/Notez/Notez.properties
+++ b/Notez/Notez.properties
@@ -1,9 +1,9 @@
 #de.util.NotezProperties
-#Thu Dec 04 11:26:22 CET 2014
+#Thu Dec 04 19:42:19 CET 2014
 Prop.NotezRemoteFolder=./remote/
 Prop.BtnGroupVisible=false
 Prop.BtnSaveVisible=false
-Prop.AlwaysSaveOnExit=false
+Prop.AlwaysSaveOnExit=true
 Prop.BtnRemoveVisible=false
 Prop.BtnShareVisible=true
 Prop.StartReceiver=true
