Replaced old NotezData by NotezDataProperties

--- a/Notez/Notez.properties
+++ b/Notez/Notez.properties
@@ -1,13 +1,14 @@
 #de.util.NotezProperties
-#Thu Dec 04 19:42:19 CET 2014
+#Mon Dec 08 16:28:20 CET 2014
 Prop.NotezRemoteFolder=./remote/
 Prop.BtnGroupVisible=false
-Prop.BtnSaveVisible=false
+Prop.BtnSaveVisible=true
 Prop.AlwaysSaveOnExit=true
 Prop.BtnRemoveVisible=false
 Prop.BtnShareVisible=true
 Prop.StartReceiver=true
 Prop.BtnAddVisible=false
 Prop.NotezWorkFolder=./
+Prop.BtnPrintVisible=false
 Prop.BtnPinVisible=false
 Prop.LetReceiverRunning=false
