--- a/Notez/build.xml
+++ b/Notez/build.xml
@@ -1,84 +1,115 @@
-<project name="install Notez" basedir="." default="fillRegistry">
+<project name="install Notez" basedir="." default="clean">
 	<description>
 		Install and link notez on the system
 	</description>
 
+	<property file="build.properties" />
+
 	<property name="prj.name" value="Notez" />
+	<property name="prj.class.main" value="de.Startup" />
+	<property name="src.dir" location="src" />
+	<property name="bin.dir" location="bin" />
+	<property name="dist.dir" location="dist" />
+	<property name="test.data.dir" location="test/data" />
+	<property name="jar.file" location="${dist.dir}/${prj.name}.jar" />
+	<property name="prj.java.version" value="1.8" />
 
-	<property name="prj.jar" value="${prj.name}.jar" />
+	<property name="applicationdir" value="${eclipse.home}/../${prj.name}/" />
 	<property name="prj.icon.name" value="${prj.name}.ico" />
-
-	<property name="main" value="de.Startup" />
-	<property name="notezDirName" value="${prj.name}" />
-
-	<property name="applicationdir" value="${eclipse.home}${file.separator}..${file.separator}${notezDirName}${file.separator}" />
 	<property name="reg" value="regedit.reg" />
 
-	<target name="install" depends="jar">
-		<description>
-			Creates the jar and moves everything needed to the path of this program
-		</description>
-		
-		<echo>moving files</echo>
-		<move file="${prj.jar}" todir="${applicationdir}" overwrite="true" />
-		<copy file="bin${file.separator}include${file.separator}icons${file.separator}logo.ico" todir="${applicationdir}${prj.icon.name}" failonerror="false" />
-		<echo>installation finished</echo>
+
+	<path id="compile.classpath">
+		<!--include name="$(src.includes)" if="src.includes" /-->
+		<fileset dir="${src.dir}/include/lib">
+			<include name="**/*.jar" />
+		</fileset>
+		<pathelement location="C:\app\eclipse_luna_java\plugins\org.junit_4.11.0.v201303080030/junit.jar" />
+		<pathelement location="D:\workspace\git\JenkinsTest/hamcrest-core-1.3.jar" />
+	</path>
+
+	<path id="test.classpath">
+		<pathelement location="${bin.dir}" />
+		<fileset dir="${src.dir}/include/lib">
+			<include name="**/*.jar" />
+		</fileset>
+		<pathelement location="C:\app\eclipse_luna_java\plugins\org.junit_4.11.0.v201303080030/junit.jar" />
+		<pathelement location="D:\workspace\git\JenkinsTest/hamcrest-core-1.3.jar" />
+	</path>
+
+	<target name="init">
+		<mkdir dir="${bin.dir}" />
+		<mkdir dir="${dist.dir}" />
+		<mkdir dir="${test.data.dir}" />
 	</target>
 
-	<target name="fillRegistry" depends="install">
+	<target name="compile" depends="init">
+		<javac srcdir="${src.dir}" destdir="${bin.dir}" includeantruntime="true" source="1.8" target="1.8">
+			<classpath refid="compile.classpath" />
+		</javac>
+	</target>
+
+	<target name="test" depends="compile">
+		<junit printsummary="true" haltonfailure="true">
+			<classpath refid="test.classpath" />
+			<formatter type="xml" />
+			<batchtest todir="${test.data.dir}">
+				<fileset dir="${bin.dir}" includes="**/test/**Test.class" />
+			</batchtest>
+		</junit>
+	</target>
+
+	<target name="archive" depends="compile">
+		<jar destfile="${jar.file}">
+			<manifest>
+				<attribute name="Built-By" value="${user.name}" />
+				<attribute name="Main-Class" value="${prj.class.main}" />
+				<attribute name="Class-Path" value="." />
+			</manifest>
+
+			<fileset dir="${bin.dir}" includes="**/*.class" excludes="**/test/**" />
+			<fileset dir="${bin.dir}" includes="include/**" />
+		</jar>
+	</target>
+
+	<target name="dist" depends="test, archive">
+		<move file="${jar.file}" todir="${applicationdir}" overwrite="true" />
+		<copy file="bin/include/icons/logo.ico" todir="${applicationdir}" failonerror="false" />
+	</target>
+
+	<target name="clean" depends="dist">
+		<delete dir="${dist.dir}" />
+	</target>
+
+	<target name="fillRegistry" depends="dist">
 		<description>
-			fills the registry after installing the program, so that the icon will be displayed for files of that program
-		</description>
-		
+				fills the registry after installing the program, so that the icon will be displayed for files of that program
+			</description>
+
 		<echo>creating .reg file</echo>
 		<echo file="${reg}">Windows Registry Editor Version 5.00
 
-		[HKEY_CLASSES_ROOT\.notez]
-		@="notez_auto_file"
-					
-		[HKEY_CLASSES_ROOT\notez_auto_file]
-		@=""
+			[HKEY_CLASSES_ROOT\.notez]
+			@="notez_auto_file"
+						
+			[HKEY_CLASSES_ROOT\notez_auto_file]
+			@=""
 
-		[HKEY_CLASSES_ROOT\notez_auto_file\DefaultIcon]
-		@="${applicationdir}${prj.icon.name}"
+			[HKEY_CLASSES_ROOT\notez_auto_file\DefaultIcon]
+			@="${applicationdir}${prj.icon.name}"
 
-		[HKEY_CLASSES_ROOT\notez_auto_file\shell]
+			[HKEY_CLASSES_ROOT\notez_auto_file\shell]
 
-		[HKEY_CLASSES_ROOT\notez_auto_file\shell\open]
+			[HKEY_CLASSES_ROOT\notez_auto_file\shell\open]
 
-		[HKEY_CLASSES_ROOT\notez_auto_file\shell\open\command]
-		@="\"${applicationdir}${prj.jar}\" %1"</echo>
+			[HKEY_CLASSES_ROOT\notez_auto_file\shell\open\command]
+			@="\"${applicationdir}${prj.name}.jar\" %1"</echo>
 
 		<echo>executing .reg file</echo>
 		<exec executable="cmd">
 			<arg value="${reg}" />
 		</exec>
 		<delete file="${reg}" />
-	</target>
-
-	<target name="jar">
-		<echo>Starting creation of jar</echo>
-		<echo>deleting old jar</echo>
-
-		<delete failonerror="false">
-			<filelist>
-				<file name="${prj.jar}" />
-			</filelist>
-		</delete>
-
-		<echo>creating new jar</echo>
-		<jar destfile="${prj.jar}">
-
-			<manifest>
-				<attribute name="Built-By" value="${user.name}" />
-				<attribute name="Main-Class" value="${main}" />
-				<attribute name="Class-Path" value="." />
-			</manifest>
-
-			<fileset dir="bin" includes="**/*.class" />
-			<fileset dir="bin" includes="include/**" />
-		</jar>
-		<echo>jar successfully created</echo>
 	</target>
 
 </project>
