--- a/Notez/build.xml
+++ b/Notez/build.xml
@@ -74,7 +74,7 @@
 
 	<target name="dist" depends="test, archive">
 		<move file="${jar.file}" todir="${applicationdir}" overwrite="true" />
-		<copy file="bin/include/icons/logo.ico" todir="${applicationdir}" failonerror="false" />
+		<copy file="bin/include/icons/logo.ico" tofile="${applicationdir}/${prj.icon.name}" failonerror="false" />
 	</target>
 
 	<target name="clean" depends="init">
